--- a/templates/view.admin.html
+++ b/templates/view.admin.html
@@ -1,4 +1,4 @@
-<div class="lunch-view-admin">
+<main class="lunch-view-admin">
 
 	<h1>Admin Panel</h1>
 
@@ -106,4 +106,4 @@
 		</ul>
 	</section>
 
-</div>
+</main>
