--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -11,6 +11,7 @@
 @import "compass/css3/border-radius";
 @import "compass/css3/box-shadow";
 @import "compass/css3/font-face";
+@import "compass/css3/user-interface";
 
 // Imported
 @import "vendor.normalize";
@@ -23,6 +24,7 @@
 @import "util.grid";
 
 // UI Elements
+@import "ui.typography";
 @import "ui.header";
 @import "ui.inputs";
 @import "ui.buttons";
