--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -1,24 +1,29 @@
 <main class="lunch-view-settings">
 
 	<header>
+		<!--
 		<h1>Marius</h1>
 		<p class="lunch-profile-email"><a href="mailto:mrz@19h13.com">mrz@19h13.com</a></p>
-		<!-- <h1>{{user.nick}}</h1>
-		<p>{{user.mail}}</p> -->
+		-->
+		<h1>{{user.nick}}</h1>
+		<p class="lunch-profile-email"><a href="mailto:{{user.mail}}">{{user.mail}}</a></p>
 	</header>
 
 	<section class="lunch-profile">
 		<h2>Change Item</h2>
 		<div class="lunch-altar">
 			<div class="lunch-avatar">
-				<!-- <img ng-src="user.item" alt="profile item" ng-class="{lunch-item-front: 'user.item.front'}"> -->
+				<!--
 				<img src="static/img/ft.png" alt="">
 				<img src="static/img/item-party.png"  class="lunch-item-image" alt="">
-				<!-- <img ng-src="user.ava" alt="profile picture"> -->
+				-->
+				<img ng-src="user.item" alt="profile item" ng-class="{lunch-item-front: 'user.item.front'}">
+				<img ng-src="user.ava" alt="profile picture">
 			</div>
 		</div>
 		<ul class="lunch-runway">
-			<li class="lunch-item">
+			<!--
+			<li class="lunch-item" ng-repeat="item in user.inv">
 				<div class="lunch-avatar">
 					<img src="static/img/item-halloween.png" alt="" class="lunch-item-image">
 				</div>
@@ -28,6 +33,7 @@
 					<img src="static/img/item-party.png" alt="" class="lunch-item-image">
 				</div>
 			</li>
+			-->
 			<li class="lunch-item"
 				ng-repeat="item in user.inv"
 				ng-click="submitActiveItem(item._id)">
