--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -89,7 +89,7 @@
 				</div>
 			</fieldset>
 				<button type="submit" class="lunch-button"
-					ng-click="submitPassForm"
+					ng-click="submitPassForm()"
 					ng-disabled="passForm.$invalid">change password</button>
 		</form>
 
