added logout button

--- a/templates/tmpl.navi.html
+++ b/templates/tmpl.navi.html
@@ -30,5 +30,11 @@
 				<span class="lunch-label">Admin Panel</span>
 			</a>
 		</li>
+		<li class="lunch-nav-elem">
+			<a href="/logout">
+				<span class="lunch-icon">Y</span>
+				<span class="lunch-label">Logout</span>
+			</a>
+		</li>
 	</ul>
 </nav>
