--- a/templates/mail.overview/html.ejs
+++ b/templates/mail.overview/html.ejs
@@ -20,6 +20,7 @@
 				<% for(var i = 0; i < venues.length; i++) { %>
 					<div class="lunch-mail-venue">
 						<h2><a href="http://www.lunchpad.co/#/venue/<%= venues[i]._id %>"><%= venues[i].name %></a></h2>
+						<p><a href="http://www.lunchpad.co/#/venue/<%= venues[i]._id %>">visit venue</a></p>
 						<ul>
 							<% for(var j = 0; j < venues[i].users.length; j++) { %>
 								<li>
@@ -43,31 +44,6 @@
 	</body>
 </html>
 
-
-
-<!--
-<h1> Hello <%= user.nick %> <h1>
-<p>Check out the new checkins</p>
-<ul>
-<% for(var i = 0; i < notis.length; i++) { %>
-	<li><%= notis[i].unick %> in <%= notis[i].vname %></li>
-<% } %>
-</ul>
-<ul>
-<% for(var i = 0; i < venues.length; i++) { %>
-	<li><%= venues[i]._id %> <%= venues[i].name %>
-		<ul>
-		<% for(var j = 0; j < venues[i].users.length; j++) { %>
-			<li>Nick: <%= venues[i].users[j].nick %> <br>
-			ID: <%= venues[i].users[j]._id %> <br>
-			ava: <%= venues[i].users[j].ava %>
-			</li>
-		<% } %>
-		</ul>
-	</li>
-<% } %>
-</ul>
--->
 <!--
 Alle Attribute:
 uid
