--- a/templates/mail.overview/style.css
+++ b/templates/mail.overview/style.css
@@ -1,6 +1,7 @@
 body {
 	font-family: sans-serif;
 	font-size: 16px;
+	text-align:center;
 }
 
 .lunch-mail a {
@@ -9,6 +10,7 @@ body {
 }
 
 .lunch-mail-venue {
+	padding: 1.25em 0;
 	border-width: 0px;
 	border-top-width: 0;
 	border-bottom-width: 2px;
@@ -22,13 +24,23 @@ body {
 }
 
 .lunch-mail-venue h2 {
-	margin: 1em 0 6px 0;
+	margin: 0 0 6px 0;
 	text-transform: uppercase;
 	font-size: 20px;
 	font-family: "Impact", sans-serif;
 }
 
+.lunch-mail-venue p {
+	margin-top: 6px;
+}
+
+.lunch-mail-venue a {
+
+	color: #00B9E7;
+}
+
 .lunch-mail-venue h2 a {
+	float: none;
 	color: black;
 }
 
@@ -37,34 +49,34 @@ body {
 }
 
 .lunch-mail-content {
-	margin: 2em 0;
+	margin: 3em 0;
 	width: 100%;
 }
 
 .lunch-mail-content ul {
 	padding: 0;
-	margin: 6px 0 10px 0;
-	display: table;
+	margin: 0;
 }
 
 .lunch-mail-content li {
 	list-style-type: none;
-	float: left;
+	display: inline;
 }
 
 .lunch-mail-container {
-	max-width: 600px;
-	padding: 20px;
+	max-width: 500px;
+	padding: 40px 20px 20px 20px;
 	margin: 0 auto;
 }
 
 .lunch-mail-footer {
-	margin-top: 60px;
+	margin-top: 70px;
+	margin-bottom: 0;
 	font-size: 12px;
-	color: #ddd;
+	color: #bbb;
 }
 
 .lunch-mail-footer a {
-	color:#ddd;
+	color:#bbb;
 	text-decoration: underline;
 }
