--- a/templates/mail.overview/style.css
+++ b/templates/mail.overview/style.css
@@ -2,6 +2,15 @@ body {
 	font-family: sans-serif;
 	font-size: 16px;
 	text-align:center;
+	background-color: #eee;
+}
+
+.lunch-mail {
+	padding: 10px;
+}
+
+.lunch-mail-container {
+	background-color: #fff;
 }
 
 .lunch-mail a {
@@ -56,6 +65,7 @@ body {
 .lunch-mail-content ul {
 	padding: 0;
 	margin: 0;
+
 }
 
 .lunch-mail-content li {
@@ -65,12 +75,12 @@ body {
 
 .lunch-mail-container {
 	max-width: 500px;
-	padding: 40px 20px 20px 20px;
+	padding: 40px 20px 40px 20px;
 	margin: 0 auto;
 }
 
 .lunch-mail-footer {
-	margin-top: 70px;
+	margin-top: 40px;
 	margin-bottom: 0;
 	font-size: 12px;
 	color: #bbb;
