fixed image in template

--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -39,7 +39,7 @@
 				ng-click="submitActiveItem(item._id)">
 				<div class="lunch-avatar">
 					<span>{{item.name}}</span>
-					<img ng-src="item.url">
+					<img ng-src="{{item.url}}">
 				</div>
 			</li>
 		</ul>
