better styling of error messenger

--- a/dev/sass/_page.app.scss
+++ b/dev/sass/_page.app.scss
@@ -48,7 +48,24 @@
 
 
 
+/* Body */
 
+// Mobile First
+
+body {
+	padding: {
+		top: 0px;
+	}
+}
+
+
+@mixin body-s() {
+	body {
+		padding: {
+			top: 0;
+		}
+	}
+}
 
 
 
