--- a/templates/tmpl.erroralert.html
+++ b/templates/tmpl.erroralert.html
@@ -2,7 +2,7 @@
 
 	<div class="lunch-flash-container">
 
-		<button ng-click="closeAll()" class="lunch-flash-close">X</button>
+		<a ng-click="closeAll()" class="lunch-fn-close"><span class="lunch-icon">&times;</span></a>
 
 		<ul>
 			<li
