--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -44,6 +44,7 @@
 				</div>
 			</li>
 		</ul>
+		<div ng-show="itemUpdated">The new item will be added to your next Checkin!</div>
 	</section>
 
 	<section>
