--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -30,6 +30,7 @@
 @import "ui.buttons";
 
 // Templates
+@import "tmpl.avatar";
 @import "tmpl.venue";
 @import "tmpl.flash";
 @import "tmpl.comment";
