--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -39,7 +39,7 @@
 				ng-click="submitActiveItem(item._id)"
 				ng-class="{'lunch-active':item.active}">
 				<div class="lunch-avatar">
-					<span>{{item.name}}</span>
+					<span class="lunch-item-info">{{item.name}}</span>
 					<img ng-src="{{item.url}}">
 				</div>
 			</li>
