--- a/dev/sass/_view.settings.scss
+++ b/dev/sass/_view.settings.scss
@@ -162,10 +162,28 @@
 			z-index: 0;
 
 			// skin
+			opacity: .85;
 			@include border-radius(15px);
 
 			background: {
 				color: $lunch-clr-blue;
+			}
+
+			.lunch-icon {
+				// box
+				display: block;
+				padding: {
+					top: 2px;
+					left: 3px;
+					right: 3px;
+					bottom: 4px;
+				}
+
+				// typo
+				font-size: 24px;
+
+				// skin
+				color: $lunch-clr-white;
 			}
 		}
 	}
